* 2014-03-06 - thorben.betten@open-xchange.com

 - Fix for bug 31392: Made module-specific error messages

* 2014-03-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 31391: Use dynamically registered key and certificate providers for cloud-based push notifications
 
* 2014-03-03 - dennis.sieben@open-xchange.com

 - Fix for bug 31329: Multi-line calculation has now also been added for PGP_ENCRYPT commands

* 2014-03-03 - dennis.sieben@open-xchange.com

 - Added null check for possible NPE in OSGiAbstractor

* 2014-03-03 - marcus.klein@open-xchange.com

 - Fix for bug 31364: Marked autoconfig.properties as configuration file.
 - Fix for bug 29975: Committing now first the context data to the user database before committing the context to the config database. This
   is possible by writing the context database mapping through the database pooling component that writes the information in their own
   caches, too. This allows later committing to the config database.

* 2014-03-03 - thorben.betten@open-xchange.com

 - Fix for bug 31324: Fixed parsing of .po file that contain non-ascii characters
 - Fix for bug 31319: Implemented CLI to check that login2context mappings contain context identifier

* 2014-03-03 - lars.hoogestraat@open-xchange.com

 - Fix for bug 31137: Ignore conversion error on referencing inline images

* 2014-03-03 - tobias.friedrich@open-xchange.com

 - Fix for bug 31258: Add (cid,changing_date) index to calendar tables to speed up change detection 
 - Fix for bug 30995: Introduced displayable exception in case the redirect address is invalid or rejected 
 - Fix for bug 31362: Corrected CREATE TABLE statements 

* 2014-03-01 - thorben.betten@open-xchange.com

 - Fix for bug 30701: Signal proper "Content-Length" in case "off"/"len" parameters were specified
 - Fix for bug 30598: Set disposition explicitly to "attachment" on forward-as-attachment action

* 2014-02-28 - marcus.klein@open-xchange.com
